# multi-agent-customer-intelligence-dashboard

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  session_summary.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: audit_agent.py  base.py  behavior_agent.py  churn_agent.py  narrative_agent.py  query_agent.py  recommendation_agent.py  segmentation_agent.py  sentiment_agent.py
backend/app/db/: database.py  init_db.py  workspace_db.py
backend/app/models/: __init__.py  agent_run.py  anomaly.py  audit_result.py  behavior_event.py  campaign.py  churn_prediction.py  customer.py  customer_feature.py  customer_segment.py  executive_summary.py  feedback.py  order.py  query_result.py  recommendation.py  sentiment_result.py  subscription.py  support_ticket.py  workspace.py  workspace_context.py
backend/app/routes/: agents.py  churn.py  customers.py  overview.py  query.py  recommendations.py  segments.py  sentiment.py  workspaces.py
backend/app/schemas/: agent.py  audit.py  churn.py  customer.py  narrative.py  overview.py  query.py  recommendation.py  segment.py  sentiment.py  workspace.py
backend/app/security/: __init__.py  auth.py
backend/tests/: conftest.py  helpers.py  test_churn_routes.py  test_error_handling.py  test_health.py  test_llm_client.py  test_main_config.py  test_overview_routes.py  test_owner_access.py  test_query.py  test_query_agent.py  test_scenarios.py  test_security_headers.py  test_workspace_generation.py  test_workspaces.py
data/: workspaces.db
(+60 files in other folders)
