[project]
name = "luminosity-intelligence"
version = "0.1.0"
description = "Multi-Agent Customer Intelligence Dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "chromadb>=0.4.0",
    "scikit-learn>=1.4.0",
    "shap>=0.44.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "faker>=22.0.0",
    "structlog>=24.1.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
